--- a/local.conf
+++ b/local.conf
@@ -3,6 +3,7 @@
 ################ build configuration directives ###########
 CONF_VERSION = "2"
 MACHINE ?= "raspberrypi4-64"
+DISTRO ?= "trinux"
 DISTRO ?= "poky"
 PACKAGE_CLASSES ?= "package_rpm"
 
@@ -16,8 +17,7 @@ DEPLOY_DIR   ?= "${TMPDIR}/deploy"
 ####################### image features ####################
 IMAGE_FSTYPES = "ext3 wic"
 IMAGE_FSTYPES:remove = "${@'' if d.getVar('MACHINE') == 'raspberrypi4-64' else 'wic'}"
-IMAGE_FEATURES:remove = "splash"
-IMAGE_FEATURES:remove = "package-management"
+
 EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
 EXTRA_IMAGE_FEATURES:append = " ssh-server-dropbear"
 IMAGE_OVERHEAD_FACTOR = "1.1"
