--- a/local.conf
+++ b/local.conf
@@ -47,10 +47,10 @@ SSTATE_MIRRORS ?= "file://.* http://sstate.yoctoproject.org/all/PATH;downloadfil
 BB_HASHSERVE = "auto"
 BB_SIGNATURE_HANDLER = "OEEquivHash"
 
-############ optional host build configuration ############
+########## host build configuration is optional ###########
 include dell.inc
 include hp.inc
 
-################ target build configuration ###############
+### in contrast, target build configuration is required  ##
 require ${MACHINE}.inc
 
