--- a/local.conf
+++ b/local.conf
@@ -3,7 +3,7 @@
 ################ build configuration directives ###########
 CONF_VERSION = "2"
 MACHINE ?= "raspberrypi4-64"
-DISTRO ?= "trinux"
+DISTRO ?= "thc"
 DISTRO ?= "poky"
 PACKAGE_CLASSES ?= "package_rpm"
 
