--- a/local.conf
+++ b/local.conf
@@ -18,15 +18,15 @@ DEPLOY_DIR   ?= "${TMPDIR}/deploy"
 IMAGE_FSTYPES = "ext3 wic"
 IMAGE_FSTYPES:remove = "${@'' if d.getVar('MACHINE') == 'raspberrypi4-64' else 'wic'}"
 
-EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
-EXTRA_IMAGE_FEATURES:append = " ssh-server-dropbear"
+EXTRA_IMAGE_FEATURES ?= "ssh-server-dropbear"
+EXTRA_IMAGE_FEATURES:append = " debug-tweaks"
+
 IMAGE_OVERHEAD_FACTOR = "1.1"
 ROOT_HOME ??= "/home/root"
 
 ################### extra packages to build ###############
-PACKAGE_INSTALL:append = " thcp imgui"
-PACKAGE_INSTALL:append = " xorg-minimal-fonts xkbcomp"
-PACKAGE_INSTALL:append = " os-release procps file"
+#IMAGE_INSTALL:append = " xorg-minimal-fonts xkbcomp"
+IMAGE_INSTALL:append = " os-release procps file zile"
 
 ################### storage device monitor ################
 W_A_R_N ?= "2G,2M"
