'auto-kkkommit-by-repo'

--- a/bblayers.conf
+++ b/bblayers.conf
@@ -10,4 +10,6 @@ BBLAYERS ?= " \
   /home/yocto/layer/oe/meta-oe \
   /home/yocto/layer/rpi/meta-raspberrypi \
   /home/yocto/layer/thc/meta-thc \
+  /home/yocto/layer/poky/meta-selftest \
   "
+
