include test configuration

--- a/local.conf
+++ b/local.conf
@@ -50,6 +50,7 @@ BB_SIGNATURE_HANDLER = "OEEquivHash"
 ########## host build configuration is optional ###########
 include dell.inc
 include hp.inc
+include test.inc
 
 ### in contrast, target build configuration is required  ##
 require ${MACHINE}.inc
