'auto-kkkommit-by-repo'

--- a/local.conf
+++ b/local.conf
@@ -26,7 +26,7 @@ ROOT_HOME ??= "/home/root"
 
 ################### extra packages to build ###############
 #IMAGE_INSTALL:append = " xorg-minimal-fonts xkbcomp"
-IMAGE_INSTALL:append = " os-release procps file zile"
+IMAGE_INSTALL:append = " os-release procps file zile cpufrequtils openssl"
 
 ################### storage device monitor ################
 W_A_R_N ?= "2G,2M"
@@ -40,6 +40,9 @@ BB_DISKMON_DIRS:append = " WARN,${DL_DIR},${W_A_R_N} STOPTASKS,${DL_DIR},${S_T_O
 BB_DISKMON_DIRS:append = " WARN,${SSTATE_DIR},${W_A_R_N} STOPTASKS,${SSTATE_DIR},${S_T_O_P} HALT,${SSTATE_DIR},${H_A_L_T}"
 
 INHERIT:append = " rm_work"
+INHERIT:append = " extrausers"
+# EXTRA_USERS_PARAMS = "usermod -P p@ssw0rd root;"
+# EXTRA_USERS_PARAMS = "usermod -p $(openssl passwd pass) root;"
 
 ######################## mirrors ##########################
 BB_HASHSERVE_UPSTREAM = "hashserv.yocto.io:8687"
