--- a/local.conf
+++ b/local.conf
@@ -19,14 +19,12 @@ IMAGE_FSTYPES = "ext3 wic"
 IMAGE_FSTYPES:remove = "${@'' if d.getVar('MACHINE') == 'raspberrypi4-64' else 'wic'}"
 
 EXTRA_IMAGE_FEATURES ?= "ssh-server-dropbear"
-EXTRA_IMAGE_FEATURES:append = " debug-tweaks"
+# EXTRA_IMAGE_FEATURES:append = " debug-tweaks"
 
 IMAGE_OVERHEAD_FACTOR = "1.1"
-ROOT_HOME ??= "/home/root"
 
 ################### extra packages to build ###############
 #IMAGE_INSTALL:append = " xorg-minimal-fonts xkbcomp"
-IMAGE_INSTALL:append = " os-release procps file zile cpufrequtils openssl"
 
 ################### storage device monitor ################
 W_A_R_N ?= "2G,2M"
@@ -40,9 +38,9 @@ BB_DISKMON_DIRS:append = " WARN,${DL_DIR},${W_A_R_N} STOPTASKS,${DL_DIR},${S_T_O
 BB_DISKMON_DIRS:append = " WARN,${SSTATE_DIR},${W_A_R_N} STOPTASKS,${SSTATE_DIR},${S_T_O_P} HALT,${SSTATE_DIR},${H_A_L_T}"
 
 INHERIT:append = " rm_work"
-INHERIT:append = " extrausers"
-# EXTRA_USERS_PARAMS = "usermod -P p@ssw0rd root;"
-# EXTRA_USERS_PARAMS = "usermod -p $(openssl passwd pass) root;"
+# INHERIT:append = " extrausers"
+# EXTRA_USERS_PARAMS = "usermod -p $(openssl passwd ppp) root;"
+# EXTRA_USERS_PARAMS = "usermod -p \$5\$2qQtEpyiwk33Lj5/\$KK0mV7X4Mzt15EAo56iymdLUtL9Bbv0HWe8hpUZdhm1 root;"
 
 ######################## mirrors ##########################
 BB_HASHSERVE_UPSTREAM = "hashserv.yocto.io:8687"
