'auto-kkkommit-by-repo'

--- a/local.conf
+++ b/local.conf
@@ -6,12 +6,7 @@ MACHINE ?= "raspberrypi4-64"
 DISTRO ?= "thc"
 PACKAGE_CLASSES ?= "package_rpm"
 
-####################### build system path #################
-DL_DIR       ?= "${TOPDIR}/downloads"
-SSTATE_DIR   ?= "${TOPDIR}/sstate-cache"
-TMPDIR        = "${TOPDIR}/tmp"
-BASE_WORKDIR ?= "${TMPDIR}/work"
-DEPLOY_DIR   ?= "${TMPDIR}/deploy"
+# TMPDIR        = "${TOPDIR}/tmp/${MACHINE}"
 
 ################### storage device monitor ################
 W_A_R_N ?= "2G,2M"
