'auto-kkkommit-by-repo'

--- a/local.conf
+++ b/local.conf
@@ -27,7 +27,7 @@ SSTATE_MIRRORS ?= "file://.* http://sstate.yoctoproject.org/all/PATH;downloadfil
 BB_HASHSERVE = "auto"
 BB_SIGNATURE_HANDLER = "OEEquivHash"
 
-########## host build configuration is optional ###########
+########## private host build configuration is optional ###########
 include dell.inc
 include hp.inc
 include test.inc
