'auto-kkkommit-by-repo'

--- a/local.conf
+++ b/local.conf
@@ -9,15 +9,14 @@ PACKAGE_CLASSES ?= "package_rpm"
 # TMPDIR        = "${TOPDIR}/tmp/${MACHINE}"
 
 ################### storage device monitor ################
-W_A_R_N ?= "2G,2M"
-S_T_O_P ?= "400M,400K"
-H_A_L_T ?= "80M,80K"
-K_I_L_L ?= "16M,16K"
+WARN ?= "2G,2M"
+STOP ?= "400M,400K"
+HALT ?= "80M,80K"
+KILL ?= "16M,16K"
 
-BB_DISKMON_DIRS ??= "WARN,/tmp,${S_T_O_P} STOPTASKS,/tmp,${H_A_L_T} HALT,/tmp,${K_I_L_L}"
-BB_DISKMON_DIRS:append = " WARN,${TMPDIR},${W_A_R_N} STOPTASKS,${TMPDIR},${S_T_O_P} HALT,${TMPDIR},${H_A_L_T}"
-BB_DISKMON_DIRS:append = " WARN,${DL_DIR},${W_A_R_N} STOPTASKS,${DL_DIR},${S_T_O_P} HALT,${DL_DIR},${H_A_L_T}"
-BB_DISKMON_DIRS:append = " WARN,${SSTATE_DIR},${W_A_R_N} STOPTASKS,${SSTATE_DIR},${S_T_O_P} HALT,${SSTATE_DIR},${H_A_L_T}"
+BB_DISKMON_DIRS ??= "\
+WARN,/tmp,${STOP} STOPTASKS,/tmp,${HALT} HALT,/tmp,${KILL} \
+WARN,${TMPDIR},${WARN} STOPTASKS,${TMPDIR},${STOP} HALT,${TMPDIR},${HALT}"
 
 INHERIT:append = " rm_work"
 
