'auto-kkkommit-by-repo'

--- a/local.conf
+++ b/local.conf
@@ -26,6 +26,8 @@ SSTATE_MIRRORS ?= "file://.* http://sstate.yoctoproject.org/all/PATH;downloadfil
 BB_HASHSERVE = "auto"
 BB_SIGNATURE_HANDLER = "OEEquivHash"
 
+BB_NUMBER_THREADS = "24"
+
 ########## private host build configuration is optional ###########
 include dell.inc
 include hp.inc
