'auto-kkkommit-by-repo'

--- a/bblayers.conf
+++ b/bblayers.conf
@@ -1,5 +1,5 @@
-# POKY_BBLAYERS_CONF_VERSION is increased each time build/conf/bblayers.conf
-# changes incompatibly   /home/yocto/kalo/workspace
+# bitbake metadata layers
+
 POKY_BBLAYERS_CONF_VERSION = "2"
 
 BBPATH = "${TOPDIR}"
@@ -11,4 +11,10 @@ BBLAYERS ?= " \
   /home/yocto/layer/rpi/meta-raspberrypi \
   /home/yocto/layer/thc/meta-thc \
   "
+
+BBLAYERS:append = " \
+  /home/yocto/layer/oe/meta-multimedia \
+  /home/yocto/layer/oe/meta-python \
+  "
+
 
