--- a/local.conf
+++ b/local.conf
@@ -6,6 +6,8 @@ MACHINE ?= "raspberrypi4-64"
 DISTRO ?= "thc"
 PACKAGE_CLASSES ?= "package_rpm"
 
+# MACHINE_FEATURES:append = " serial"
+
 # TMPDIR        = "${TOPDIR}/tmp/${MACHINE}"
 
 ################### storage device monitor ################
@@ -25,8 +27,6 @@ BB_HASHSERVE_UPSTREAM = "hashserv.yocto.io:8687"
 SSTATE_MIRRORS ?= "file://.* http://sstate.yoctoproject.org/all/PATH;downloadfilename=PATH"
 BB_HASHSERVE = "auto"
 BB_SIGNATURE_HANDLER = "OEEquivHash"
-
-BB_NUMBER_THREADS = "24"
 
 ########## private host build configuration is optional ###########
 include dell.inc
