'auto-kkkommit-by-repo'

--- a/bblayers.conf
+++ b/bblayers.conf
@@ -4,17 +4,15 @@ POKY_BBLAYERS_CONF_VERSION = "2"
 
 BBPATH = "${TOPDIR}"
 BBFILES ?= ""
-BBLAYERS ?= " \
-  /home/yocto/layer/poky/meta \
-  /home/yocto/layer/poky/meta-poky \
-  /home/yocto/layer/oe/meta-oe \
-  /home/yocto/layer/rpi/meta-raspberrypi \
-  /home/yocto/layer/thc/meta-thc \
-  "
+BBLAYERS ?= ""
 
-BBLAYERS:append = " \
-  /home/yocto/layer/oe/meta-multimedia \
-  /home/yocto/layer/oe/meta-python \
-  "
+BBLAYERS:append = " /home/yocto/layer/poky/meta"
+BBLAYERS:append = " /home/yocto/layer/poky/meta-poky"
 
+BBLAYERS:append = " /home/yocto/layer/oe/meta-oe"
+# BBLAYERS:append = " /home/yocto/layer/oe/meta-multimedia"
+# BBLAYERS:append = " /home/yocto/layer/oe/meta-python"
+
+BBLAYERS:append = " /home/yocto/layer/rpi/meta-raspberrypi"
+BBLAYERS:append = " /home/yocto/layer/thc/meta-thc"
 
